--- a/theme8.html
+++ b/theme8.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html class="content">
+<head>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <title>Глава VIII</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 class="center">Глава VIII. Геометрия</h1>
+  </header>
+  <main>
+    <p>При поступлении в лицей необходимо уметь решать задачи по следующим темам:</p>
+    <p>✓ аксиомы планиметрии;</p>
+    <p>✓ смежные углы, их свойства;</p>
+    <p>Смежные углы – это углы, у которых одна сторона общая, а другие стороны лежат на одной прямой. Запишем свойства смежных углов.</p>
+    <p>1) Сумма смежных углов всегда равна 180 градусов;</p>
+    <p>2) Если два смежных угла равны между собой, то они являются прямыми.</p>
+    <p>✓ вертикальные углы, их свойства;</p>
+    <p>Вертикальные углы – это пара углов, которые образуются при пересечении двух прямых (отрезков). Такие углы не имеют общих сторон, по сути стороны одного угла представляют собой продолжение сторон другого угла. Основное свойство вертикальных углов: градусные меры вертикальных углов равны между собой.</p>
+    <p>✓ углы, образованные при пересечении двух прямых третьей;</p>
+    <img src="8тема.png" alt="углы, образованные при пересечении двух прямых третьей">
+    <p>При пересечении двух параллельных прямых (a и b) третьей (c) образуются углы:</p>
+    <p>1. Накрест лежащие (3 и 6, 4 и 5).</p>
+    <p>2. Односторонние (3 и 5, 4 и 6)</p>
+    <p>3. Соответственные (5 и 1, 6 и 2, 7 и 3, 8 и 4)</p>
+    <p>Накрест лежащие углы равны (∠3 = ∠6, ∠4 = ∠5)</p>
+    <p>Сумма односторонних углов равна 180˚ (∠3+∠5=180˚, (∠3+∠5 = = 180˚)</p>
 
+
+
+
+
+
+
+
+
+
+    
+  </main>
+  <p><span class="formula">$$$$</span>;</p>
+    <h4 class="inline"></h4> 
+    <p class="inline"></p>
+  <footer>
+    <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+  </footer>
+</body>
+</html>
