--- a/theme8.html
+++ b/theme8.html
@@ -26,7 +26,45 @@
     <p>3. Соответственные (5 и 1, 6 и 2, 7 и 3, 8 и 4)</p>
     <p>Накрест лежащие углы равны (∠3 = ∠6, ∠4 = ∠5)</p>
     <p>Сумма односторонних углов равна 180˚ (∠3+∠5=180˚, (∠3+∠5 = = 180˚)</p>
-
+    <p>✓ перпендикулярные прямые;</p>
+    <p>✓ параллельные прямые;</p>
+    <p>✓ признаки параллельности прямых;</p>
+    <p>✓ определения медианы, высоты, биссектрисы треугольника;</p>
+    <p>Медиана треугольника — это отрезок в треугольнике, соединяющий вершину треугольника с серединой противоположной стороны.</p>
+    <p>Высота треугольника — это перпендикуляр, проведенный из вершины треугольника к прямой, содержащей противоположную сторону.</p>
+    <p>Биссектриса угла треугольника – это луч, который соединяет вершину треугольника с противоположной стороной, при этом разделяя угол пополам.</p>
+    <p>✓ признаки равенства треугольников;</p>
+    <p>1. По двум углам и стороне между ними</p>
+    <p>2. По двум сторонам и углу между ними</p>
+    <p>3. По трём сторонам</p>
+    <p>✓ задачи на построение треугольников;</p>
+    <p>✓ равнобедренный треугольник, его свойства, признаки;</p>
+    <p>Признаки:</p>
+    <p>1. Если у треугольника два угла равны, то этот треугольник является равнобедренным треугольником.</p>
+    <p>2. Если в треугольнике высота совпадает с медианой, то этот треугольник является равнобедренным</p>
+    <p>3. Если в треугольнике высота совпадает с биссектрисой, то этот треугольник является равнобедренным</p>
+    <p>4. Если в треугольнике биссектриса совпадает с медианой, то этот треугольник является равнобедренным</p>
+    <p>Свойства:</p>
+    <p>1. Если треугольник является равнобедренным треугольником, то углы при его основании равны.</p>
+    <p>2. В равнобедренном треугольнике медиана, биссектриса и высота, проведённые из вершины, противолежащей основанию, совпадают.</p>
+    <p>✓ сумма углов треугольника;</p>
+    <p>✓ соотношение между сторонами и углами треугольника;</p>
+    <p>1. В треугольнике против большей стороны лежит больший угол</p>
+    <p>2. В треугольнике против большего угла лежит большая сторона</p>
+    <p>3. Каждая сторона треугольника меньше суммы двух других сторон</p>
+    <p>✓ внешний угол треугольника, его свойство.</p>
+    <p>Внешний угол равен разности между 180° и его внутренним углом, смежным с ним.</p>
+    <p>Свойство: Внешний угол треугольника равен сумме двух оставшихся углов треугольника, не смежных с этим внешним углом.</p>
+    <p class="center"><i>Образцы решения и оформления геометрических задач:</i></p>
+    <p><span class="formula">Дано: $\triangle \mathrm{ABC} ; \mathrm{D} \in \mathrm{AC} ; \mathrm{AD}=\mathrm{DC}$ (или $\mathrm{BD}$ медиана); $\mathrm{BD}=\frac{1}{2} \mathrm{AC}$.
+Найти: $\angle \mathrm{ABC}$
+Решение: $\mathrm{AD}=\mathrm{DC}$ по определению медианы, тогда $\mathrm{BD}=\mathrm{AD}=\mathrm{DC}-$ по условию.
+$\triangle \mathrm{ABD}$ и $\triangle \mathrm{DBC}$ равнобедренные по определению.
+$\angle 1=\angle 2, \angle 3=\angle 4$ - углы при основаниях равнобедренных треугольников.
+$\angle 1+\angle 2+\angle 3+\angle 4=180^{\circ}$ - сумма внутренних углов треугольника.
+$\angle 1+\angle 3=\angle 2+\angle 4=\angle \mathrm{ABC}$ - сумма равных углов.
+Тогда $\angle \mathrm{ABC}=180^{\circ} / 2, \angle \mathrm{ABC}=90^{\circ}$. Ответ: $\angle \mathrm{B}=90^{\circ}$.</span>;</p>
+    
 
 
 
