--- a/theme8.html
+++ b/theme8.html
@@ -71,27 +71,113 @@
     <h4 class="inline">Пример 2.</h4> 
     <p class="inline">Докажите, что треугольники <span class="formula">$$\mathrm{ABC} \text { и } \mathrm{A}_1 \mathrm{~B}_1 \mathrm{C}_1$$</span>равны, если<span class="formula">$$\mathrm{AB}=\mathrm{A}_1 \mathrm{~B}_1, \quad \mathrm{AC}=\mathrm{A}_1 \mathrm{C}_1, \quad \mathrm{AM}=\mathrm{A}_1 \mathrm{M}_1, \quad \text { где } \mathrm{AM} \text { и } \mathrm{A}_1 \mathrm{M}_1$$</span>– медианы треугольников.</p>
     <div>
-      <img src="2.jpg" alt="2">
+      <img src="3.jpg" alt="2">
       <p><span class="formula">$$\begin{array}{rr}
 \text { Дано: } & \Delta \mathrm{ABC} & \Delta \mathrm{A}_1 \mathrm{~B}_1 \mathrm{C}_1, & \mathrm{AB}=\mathrm{A}_1 \mathrm{~B}_1 & \mathrm{AC}=\mathrm{A}_1 \mathrm{C}_1, & \mathrm{AM}=\mathrm{A}_1 \mathrm{M}_1 & - \text { медианы. }
 \end{array}$$</span>;</p>
       <p>Доказать:<span class="formula">$$\triangle \mathrm{ABC}=\triangle \mathrm{A}_1 \mathrm{B}_1 \mathrm{C}_1$$</span>;</p>
       <p>Доказательство:</p>
-      <p><span class="formula">$$$$</span>;</p>
-
-
-
-
-      
+      <p>Расположим ΔАВС и ΔА1В1С1 так, чтобы вершина А и А1 совпали, луч А1С1 пошел по лучу АС, вершины В и В1 находились в разных полуплоскостях относительно луча АС. Тогда вершины С и С1 совпадут, так как по условию АС=А1С1, точки М и М1 будут находиться в разных полуплоскостях относительно луча АС.</p>
+      <img src="4.jpg" alt="2">
+      <p>Проведем отрезки ВВ1 и ММ1.</p>
+      <p>По условию АВ=А1В1 и АМ=А1М1, по определению ΔАВВ1 и ΔАММ1 – равнобедренные, т.е. точка А равноудалена от концов отрезков ВВ1 и ММ1, а значит она лежит на серединном перпендикуляре к этим отрезкам.</p>
+      <p>Итак, АС - серединный перпендикуляр к отрезкам ВВ1 и ММ1:ОВ=ОВ1.</p>
+      <p>Тогда ВВ1║ММ1 как перпендикуляры к одному отрезку.</p>
+      <p>∠1=∠2 – углы при основании равнобедренного треугольника АММ1.</p>
+      <p>∠1=∠3; ∠2=∠4 – соответственные углы при параллельных прямых ВВ1 и ММ1 и секущих АМ1, АМ. Отсюда ∠3=∠4.</p>
+      <p>Значит, ΔАКК1 – равнобедренный, в нем АК=АК1 (по определению), ОК=ОК1 (по свойству высоты).</p>
+      <p>Рассмотрим ΔВ1К1М1=ΔВКМ. В них: ∠5=∠6 – вертикальные углы равных углов ∠3 и ∠4. В1К1=ОВ1-ОК1, ВК=ОВ-ОК, отсюда ВК=В1К1 – разности равных отрезков.</p>
+      <p>Аналогично, ОМ1=ОМ. ΔВ1К1М1=ΔВКМ по двум сторонам и углу между ними. Тогда В1М1=ВМ, но М и М1 – середины ВС и В1С1 по определению медианы, следовательно, ВС=В1С1.</p>
+      <p>Имеем: в ΔАВС и ΔА1В1С1 АВ=А1В1 АС=А1С1 – по условию. ВС=В1С1 по доказанному. ΔАВС и ΔА1В1С1 (по трем сторонам) что и требовалось доказать.</p>
     </div>
-
-
-
-   
+    <h4 class="inline">Пример 3.</h4> 
+    <p class="inline">Отрезки равной длины АВ и СD пересекаются в точке О так, что АО=ОD. Докажите равенство треугольников АВС и DСВ.</p>
+    <div>
+      <img src="5.jpg" alt="3">
+      <p>Дано:</p><span class="formula">$$\mathrm{AB}=\mathrm{CD}, \quad \mathrm{AB} \cap \mathrm{CD}=\{O\}, \quad \mathrm{AO}=\mathrm{OD}.$$</span></p>
+      <p>Доказать: ΔАВС=ΔDСВ.</p>
+      <p>Доказательство:</p>
+      <p>По условию CD=AB и OD=OA, но тогда ОС=ОВ, т.к. CD-OD=OC и АВ-OA=OB. ΔОВС - равнобедренный по определению. ∠1=∠2 – углы при основании равнобедренного треугольника.</p>
+      <p>Рассмотрим ΔАВС и ΔDСВ. В них АВ=CD по условию, ВС – общая, ∠1=∠2 по доказанному. ΔАВС=ΔDСВ (по двум сторонам и углу между ними), что и требовалось доказать.</p>
+    </div>
+    <div>
+      <h4 class="inline">Пример 4.</h4> 
+      <img src="6.jpg" alt="4">
+      <p class="inline">Даны ΔАВС и точки M и N такие, что середина отрезка ВМ совпадает с серединой стороны АС, а середина отрезка CN с серединой стороны АВ. Докажите, что точки M, N и A лежат на одной прямой.</p>
+      <p>Дано: ΔАВС, К∈АВ, АК=КВ, О∈AC, АО=ОС, О∈ВМ, ВО=ОМ, K∈CN, NK=KC.</p>
+      <p>Доказать: точки M, N и А лежат на одной прямой.</p>
+      <p>Доказательство: рассмотрим ΔАKN и ΔKВС. В них ВК=КА, NK=KC по условию. ∠AKN=∠BKC – вертикальные. ΔАKN=ΔKВС по двум сторонам и углу между ними.</p>
+      <p>Тогда ∠1=∠2 как соответственные элементы разных треугольников, но это внутренние накрест лежащие углы при прямых BC, NA и секущей NC.</p>
+      <p>На основании признака параллельности прямых BC║NA. Рассмотрим ΔАОМ и ΔВОС. В них: АО=ОС, ВО=ОМ – по условию, ∠АОМ=∠ВОС – вертикальные. ΔАОМ=ΔВОС по двум сторонам и углу между ними. Тогда ∠АОМ=∠ОСВ как соответственные элементы равных треугольников, но это внутренние накрест лежащие углы при прямых ВС, АМ и секущей АС. Значит, BC║AМ.</p>
+      <p>Т.к. через одну точку плоскости (А) можно провести прямую, параллельную данной прямой (ВС), причем единственную, то NA и АМ – лежат на одной прямой. Следовательно, точки A, M и N лежат на одной прямой, что и требовалось доказать.</p>
+    </div>
+    <div>
+      <h4 class="inline">Пример 5.</h4> 
+      <p class="inline">В треугольнике АВС выбрана точка О так, что ΔАОВ=ΔСОВ, ОА=ОС, ∠АОС=140˚. Докажите, что ВО - биссектриса угла АВС и найдите угол АОВ.</p>
+      <img src="7.jpg" alt="5">
+      <p>Дано: ΔАВС, О∈ΔАВС, ΔАОВ=ΔСОВ, ОА=ОС, ∠АОС=140˚.</p>
+      <p>Доказать: ВО – биссектриса ∠АВС</p>
+      <p>Найти: ∠АОВ.</p>
+      <p>Доказательство.</p>
+      <p>Т.к. по условию ΔАОВ=ΔСОВ и АО=ОС, то ∠1=∠2 как соответственные элементы равных треугольников, т.е. ВО делит ∠АВС пополам. ВО – биссектриса ΔАВС по определению.</p>
+      <p>Решение.</p>
+      <p>∠3=∠4 как соответственные элементы равных треугольников.</p>
+      <p>∠3+∠4+∠АОС=360˚.</p>
+      <p>2∠АОВ=360˚-∠АОС, 2∠АОВ=220˚.</p>
+      <p>∠АОВ=110˚.</p>
+      <p>Ответ: ∠АОВ=110˚.</p>
+    </div>
+    <p class="center"><i>Решите самостоятельно</i></p>
+    <p>1. В равнобедренном ΔАВС с основанием ВС проведена медиана
+АD. Найдите ее длину, если РΔАВС=64дм, РΔАВD=52дм.</p>
+    <p>Ответ: 20дм.</p>
+    <p>2. В равнобедренных треугольниках АВС и А1В1С1 с основаниями АС и А1С1 проведены медианы BD и B1D1. Докажите, что если BD=B1D1 и ∠В=∠В1, то эти треугольники равны.</p>
+    <p>3. У треугольников АВС и А1В1С1 проведены биссектрисы BD и
+B1D1. Известно, что BD=B1D1 и ∠В=∠В1, и ∠АDB=∠А1D1B1. Докажите равенство треугольников АВС и А1В1С1.</p>
+    <p>4. Найдите угол, если его биссектриса образует со стороной угол, равный 67˚.</p>
+    <p>Ответ: 134˚.</p>
+    <p>5. Найдите угол, если сумма смежного с ним угла и угла, смежного с прямым углом, равна 120˚.</p>
+    <p>Ответ: 150˚.</p>
+    <p>6. Данный тупой угол в три раза больше данного острого угла.
+Найдите эти углы, если угол, смежный с одним из данных углов, равен 30˚.</p>
+    <p>Ответ: 50˚ и 150˚.</p>
+    <p>7. В ΔАВС проведена биссектриса BD угла АВС, равного 70˚. Через точку С проведена прямая СМ, параллельная прямой BD и пересекающая прямую АВ в точке М. Докажите, что ΔВСМ – равнобедренный. Найдите углы этого треугольника.</p>
+    <p>Ответ: 110˚, 35˚, 35˚.</p>
+    <p>8. В ΔАВС ∠ВАС=62˚. Биссектриса угла ВАС пересекает сторону ВС в точке D. Через точку D проведена прямая FD (F∈AВ), параллельная стороне АС. Найдите углы ΔАFD и укажите его вид.</p>
+    <p>Ответ: 118˚, 31˚, 31˚. ΔАFD – равнобедренный.</p>
+    <p>9. В четырехугольнике АВСD АВ║CD, BC║AD. Биссектриса AF ∠ВАD пересекает сторону ВС в точке F, ∠ВАD=64˚. Найдите углы ΔАВF и четырехугольника AFCD.</p>
+    <p>Ответ: 116˚, 32˚, 32˚ и 32˚, 116˚, 64˚,148˚.</p>
+    <p>10. В равнобедренном ΔАВС с основанием АС проведена его биссектриса AD, ∠АDС=105˚. Найдите углы ΔАВС.</p>
+    <p>Ответ: 50˚, 50˚, 80˚</p>
+    <p>11. Величины двух углов, образованных при пересечении двух прямых, относятся как 5:7. Найдите величину каждого из четырех углов.</p>
+    <p>Ответ: 75˚, 75˚,105˚,105˚</p>
+    <p>12. Общей частью двух углов является сторона. Один угол больше другого на 10˚, а угол, образованный биссектрисами этих углов, равен 20˚. Найдите величины этих углов.</p>
+    <p>Ответ: 15˚, 25˚.</p>
+    <p>13. В равнобедренном ΔАВС с основанием АС проведен отрезок DE, параллельный АС и равный DA (D∈AВ, E∈ВC). ∠АDE=100˚.
+Докажите, что АЕ – биссектриса ΔАВС, и найдите углы этого треугольника.</p>
+    <p>Ответ: 20˚, 80˚, 80˚</p>
+    <p>14. В равнобедренном ΔАВС с основанием АС внешний угол BCD равен 106˚. Найдите углы ΔАВС.</p>
+    <p>Ответ: 74˚, 74˚, 32˚</p>
+    <p>15. В ΔАВС угол С – прямой. Из вершины А проведена биссектриса AD этого треугольника. Найдите углы ΔDАВ, если
+∠САВ=50˚.</p>
+    <p>Ответ: 25˚, 40˚, 115˚</p>
+    <p>16. Величины углов треугольника относятся как 3:5:1. Найдите величины углов треугольника и укажите его вид по углам.</p>
+    <p>Ответ: 20˚, 60˚, 100˚, тупоугольный.</p>
+    <p>17. Сформулируйте теорему, обратную данной: «Если хорда не проходит через центр окружности, то она меньше диаметра».</p>
+    <p>18. Две параллельные прямые a и b пересечены прямой c. Один из внутренних односторонних углов, образовавшихся при этом, равен 72˚. Обозначьте цифрами остальные семь углов и найдите величину каждого из них.</p>
+    <p>Ответ: 72˚, 108˚.</p>
+    <p>19. В четырехугольнике ABCD известны три его угла: ∠А=73˚,
+∠В=108˚, ∠С=72˚. Установите: а) имеются ли в этом четырехугольнике параллельные стороны; б) найдите величину угла
+D.</p>
+    <p>Ответ: нет, 107˚.</p>
+    <p>20. Отрезок АВ имеет концы на параллельных прямых a и b. Через его середину О проведен отрезок СD с концами на этих же прямых. Докажите, что отрезок CD точкой О делится пополам.</p>
+    <p>21. Основание АС равнобедренного треугольника продолжено за точку С. На продолжении отмечена точка D, ∠ВCD=108˚. Найдите величину угла, образованного основанием АС и биссектрисой АМ ΔАВС.</p>
+    <p>Ответ: 36˚.</p>
+    <p>22. В равнобедренном ΔАВС с основанием АС и боковой стороной 4см проведена медиана АО=3 см, которая продолжена на свою длину OD. Найдите периметр ΔDOC.</p>
+    <p>Ответ: 9см.</p>
+    <p>23. Развернутый угол АОВ внутренним лучом ОС разбивается на два угла АОС и СОВ, отношение величин которых соответственно равно 3:2. Найдите угол, сторонами которого являются биссектрисы развернутого угла и большего из углов АОС и СОВ.</p>
+    <p>Ответ: 90˚.</p>
   </main>
-  <p><span class="formula">$$$$</span>;</p>
-    <h4 class="inline"></h4> 
-    <p class="inline"></p>
   <footer>
     <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
   </footer>
