--- a/theme9.html
+++ b/theme9.html
@@ -1,1 +1,49 @@
-
+<!DOCTYPE html>
+<html class="content">
+<head>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <title>Проверь себя</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 class="center">Проверь себя</h1>
+  </header>
+  <main>
+    <h4 class="center">Вариант 1</h4>
+    <p>1. Вычислить:<span class="formula">$$\frac{3 \frac{1}{3}: 10+0,175: 0,35}{1,75-1 \frac{11}{17} \cdot \frac{51}{56}}$$</span></p>
+    <p>2. Решить уравнение:<span class="formula">$$\frac{2 x-3}{5}-\frac{x-1}{3}=-1$$</span></p>
+    <p>3. Решить задачу составлением уравнения: В первом мешке в 3 раза больше картофеля, чем во втором. После того, как из первого мешка взяли 30кг картофеля, а во второй насыпали ещё 10кг, в обоих мешках картофеля стало поровну. Сколько килограммов картофеля было в каждом из мешков первоначально?</p>
+    <p>4. Упростить выражение:<span class="formula">$$\frac{9\left(a^3 b^4\right)^6}{\left(-3 a^2 b^6\right)^4}$$</span></p>
+    <p>5. Представьте в виде многочлена:<span class="formula">$$4 x(x-1)-2\left(2 x^2-1\right)+x\left(2-3 x+x^2\right)$$</span></p>
+    <p>6. Разность двух сторон тупоугольного равнобедренного треугольника равна 8см, а его периметр равен 38см. Найдите стороны треугольника.</p>
+    <h4>Ответы:</h4>
+    <p>1.<span class="formula">$$3 \frac{1}{3}$$</span></p>
+    <p>2.<span class="formula">$$-11$$</span></p>
+    <p>3.<span class="formula">$$20 \text {кг}, \ 60 \text {кг}$$</span></p>
+    <p>4.<span class="formula">$$\frac{1}{9} a^{10}$$</span></p>
+    <p>5.<span class="formula">$$x^3-3 x^2+2 x-2$$</span></p>
+    <p>6.<span class="formula">$$10 ; 10 ; 18$$</span></p>
+    <h4 class="center">Вариант 2</h4>
+    <p>1. Найдите значение выражения:<span class="formula">$$0,3+0,029:\left(\frac{6}{35}-0,13\right)$$</span></p>
+    <p>2. Упростите выражение:</p>
+    <p>а)<span class="formula">$$\left(y^2-1,75 y-3,1\right)-\left(0,3 y^2+4\right)-(2 y-7,2) ;$$</span></p>
+    <p>б)<span class="formula">$$\left(-\frac{1}{2} x^2 n\right)^4 \cdot\left(-4 x^3 n^5\right)^2$$</span></p>
+    <p>3. Решите уравнение:<span class="formula">$$\frac{5 x-7}{12}=5+\frac{x-5}{8}$$</span></p>
+    <p>4. На боковых сторонах АС и ВС равнобедренного треугольника АВС (АВ - основание) даны соответственно точки Р и О так, что АР=ВО. Докажите, что АО=ВР.</p>
+    <p>5. В первый киоск завезли кваса в 1,2 раза больше, чем в другой. Каждый час в первом киоске продавали 90л кваса, а во втором 80л. Через 2,5 часа во втором киоске осталось на 65л кваса меньше, чем в первом. Сколько литров кваса завезли в каждый киоск?</p>
+    <p>6. Постройте в одной и той же координатной плоскости графики функций, заданных формулой у=2х+b, при b=2;-4.</p>
+    <h4>Ответы:</h4>
+    <p>1.<span class="formula">$$1$$</span></p>
+    <p>2.а)<span class="formula">$$0,7 y^2-3,75 y+0,1$$</span></p>
+    <p>2.б)<span class="formula">$$x^{14} n^{14}$$</span></p>
+    <p>3.<span class="formula">$$17$$</span></p>
+    <p>4.<span class="formula">$$-$$</span></p>
+    <p>5.<span class="formula">$$\text { 450л, 540л }$$</span></p>
+    <p>6.<span class="formula">$$-$$</span></p>
+  </main>
+  <footer>
+    <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+  </footer>
+</body>
+</html>
