--- a/theme10.html
+++ b/theme10.html
@@ -1,1 +1,68 @@
-
+<!DOCTYPE html>
+<html class="content">
+<head>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <title>Проверь себя</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 class="center">Проверь себя</h1>
+  </header>
+  <main>
+    <h4 class="inline">Задание 1. </h4> 
+    <p class="inline">Вычислите:</p>
+    <p>а)<span class="formula">$$2 \frac{5}{6}+2,4$$</span></p>
+    <p>б)<span class="formula">$$1 \frac{3}{7}-3 \frac{1}{2}$$</span></p>
+    <p>в)<span class="formula">$$2,7 \cdot\left(-2 \frac{1}{3}\right)$$</span></p>
+    <p>г)<span class="formula">$$3 \frac{2}{5}: 2 \frac{3}{7}$$</span></p>
+    <h4 class="inline">Задание 2. </h4> 
+    <p class="inline">Решите уравнение:</p>
+    <p>а)<span class="formula">$$(3 x-1)(5 x+4)-15 x^2=17$$</span></p>
+    <p>б)<span class="formula">$$\frac{3 x+5}{5}-\frac{x-7}{4}=1 \text {. }$$</span></p>
+    <h4>Задание 3.</h4>
+    <p>Мастер сплавил золото и серебро в отношении 5:8. Золота он взял 20г. Сколько весил сплав?</p>
+    <h4 class="inline">Задание 4.</h4> 
+    <p class="inline">Упростите выражение:</p>
+    <p>а)<span class="formula">$$\frac{\left(-a^3 b^2\right)^3 \cdot\left(-0, b a b^2\right)^2}{\left(0,2 a^3 b^5\right)^2}$$</span></p>
+    <p>б)<span class="formula">$$\frac{10^9}{\left(2^3\right)^3 \cdot\left(5^3\right)^2}$$</span></p>
+    <h4>Задание 5.</h4>
+    <p>Ананасы стоят 85 руб. за штуку. Какое максимальное число ананасов можно купить на 500 руб., если их цена снизится на 20%?</p>
+    <h4>Задание 6.</h4>
+    <p>В одном китайском городе все жители говорят на китайском или на русском языках. По-китайски говорят 85% всех жителей, а по-русски – 75%. Сколько процентов жителей этого города говорят на обоих языках?</p>
+    <h4>Задание 7.</h4>
+    <p>Из А в В со скоростью 66 км/ч отправился товарный поезд, а спустя 20 мин через В в направлении А прошел скорый поезд, двигавшийся со скоростью 90км/ч. Через сколько времени после выхода из А товарный поезд встретится со скорым, если между станциями А и В 256км?</p>
+    <h4>Задание 8.</h4>
+    <p>Прямые АВ и CD пересекаются в точке О. ОК – биссектриса угла АОD, угол СОК равен 118°. Найдите величину угла BOD.</p>
+    <h4>Задание 9.</h4>
+    <p>В равнобедренном ΔАВС с основанием АС и боковой стороной 4см проведена медиана АО=3 см, которая продолжена на свою длину OD. Найдите периметр ΔDOC.</p>
+    <h4>Задание 10.</h4>
+    <p>Не выполняя построения, установите взаимное расположение графиков линейных функций:</p>
+    <p>а)<span class="formula">$$y=5 x-6 \text { и } y=2 x-6$$</span></p>
+    <p>б)<span class="formula">$$\mathrm{y}=7-3 \mathrm{x} \text { и } \mathrm{y}=-3 \mathrm{x}-7$$</span></p>
+    <p>Или</p>
+    <h4>Задание 10.</h4>
+    <p>В числе 24x1y замените 𝑥 и 𝑦 цифрами так, чтобы оно было кратно 45.</p>
+    <h4>Ответы:</h4>
+    <p>1.<span class="formula">$$\text { а) } 5 \frac{7}{30} \text {; б) }-2 \frac{1}{14} \text {; в) }-6,3 ; \text { г) } 1,4 \text {. }$$</span></p>
+    <p>2.<span class="formula">$$\text { a) } 3 ; \text { б) }-5 \text {. }$$</span></p>
+    <p>3.<span class="formula">$$52 \text { г. }$$</span></p>
+    <p>4.<span class="formula">$$\text { a) }-9 a^5 \text { б) } 125$$</span></p>
+    <p>5.<span class="formula">$$7$$</span></p>
+    <p>6.<span class="formula">$$60 \%$$</span></p>
+    <p>7.<span class="formula">$$1 \text { ч } 50 \text{ мин }$$</span></p>
+    <p>8.<span class="formula">$$56^{\circ}$$</span></p>
+    <p>9.<span class="formula">$$9 \text{ см}$$</span></p>
+    <p>10. а) пересекаются; б) параллельны;</p>
+    <p>или</p>
+    <p>24210 и 24615</p>
+  </main>
+  <span class="formula">$$$$</span>
+  <p><span class="formula">$$$$</span></p>
+  <h4 class="inline"></h4> 
+    <p class="inline"></p>
+  <footer>
+    <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+  </footer>
+</body>
+</html>
