--- a/theme10.html
+++ b/theme10.html
@@ -2,12 +2,12 @@
 <html class="content">
 <head>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <title>Проверь себя</title>
+  <title>Примерная конкурсная работа по математике</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1 class="center">Проверь себя</h1>
+    <h1 class="center">Примерная конкурсная работа по математике</h1>
   </header>
   <main>
     <h4 class="inline">Задание 1. </h4> 
