--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="list">
       <p><a href="theme1.html">Глава I. Числа и вычисления</a></p>
       <p><a href="theme2.html">Глава II. Степень и ее свойства</a></p>
-      <p><a href="theme3.html">Глава III. Степень и ее свойства</a></p>
+      <p><a href="theme3.html">Глава III. Линейные уравнения</a></p>
       <p><a href="theme4.html">Глава IV. Текстовые задачи</a></p>
       <p><a href="theme5.html">Глава V. Одночлены и многочлены</a></p>
       <p><a href="theme6.html">Глава VI. Формулы сокращённого умножения</a></p>
